--- a/src/components/common/Input/Input.module.scss
+++ b/src/components/common/Input/Input.module.scss
@@ -1,9 +1,13 @@
+@import '../../../styles/theme.scss';
 .root {
   border: 0;
   outline: 0;
   border-radius: 5px;
   height: 50px;
   padding: 15px 20px;
+  &::placeholder {
+    color: $grey-text;
+  }
   &:focus {
     border: 0;
     outline: 0;
