--- a/src/components/pages/Login/Login.module.scss
+++ b/src/components/pages/Login/Login.module.scss
@@ -1,8 +1,9 @@
+@import '~styles/theme.scss';
 .root {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url('../../../assets/loginBackground.jpg');
+  background-image: url('~assets/loginBackground.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -11,6 +12,13 @@
 }
 .box {
   max-width: 450px;
+}
+
+@media only screen and (max-width: 600px) {
+  .box {
+    max-width: 100%;
+    padding: 0 25px;
+  }
 }
 
 .loginInput {
@@ -34,5 +42,5 @@
 .error {
   padding: 15px 20px;
   color: #fff;
-  background-color: rgb(213, 51, 51);
+  background-color: $locatory-red;
 }
